isolated-secrets-store-k8s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: secrets-store
  name: secrets-store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: secrets-store
  strategy: {}
  template:
    metadata:
      labels:
        app: secrets-store
    spec:
      containers:
      - image: quay.io/zgrinber/secrets-store:1
        name: secrets-store
