isolated-secrets-store-k8s/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: secrets-store
  name: secrets-store
  namespace: secrets-store
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: secrets-store
  sessionAffinity: None
  type: ClusterIP
