isolated-secrets-store-k8s/manifests/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: isolate-secret-store
  namespace: secrets-store
spec:
  podSelector:
    matchLabels:
      app: secrets-store
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              accessSecretStore: true
        - podSelector:
            matchLabels:
              app: secrets-store-consumer

#      ports:
#        - protocol: TCP
#          port: 8080
